Se arregla el problema del searchview y las listas infinitas
El problema del searchview consistia en que al ingresar caracteres "espacio" estos eran contados como caracteres normales
por lo que la restriccion de 4 caracteres no se cumplia y causaba en la pagina de animeflv, lo que causaba un error en la app.
El problema de las listas infinitas era que: 1) no estaba aplicada a las busquedas 2) al rotar la pantalla, no aparecia
el progress bar al llegar al limite y cargaba todo de una vez, esto se debia a que al reiniciar la vista despues de
una rotacion, se declaraba nuevamente el setLayoutManager lo cual causaba el error.

--- a/app/src/main/res/layout/busqueda_items_flv.xml
+++ b/app/src/main/res/layout/busqueda_items_flv.xml
@@ -23,7 +23,7 @@
             android:layout_width="95dp"
             android:layout_height="120dp"
             android:id="@+id/preview_flv"
-            android:background="@drawable/untitled" />
+            android:background="@drawable/img_back_vertical" />
 
         <RelativeLayout
             android:layout_width="match_parent"
