--- a/app/src/main/res/layout/home_screen_animeflv.xml
+++ b/app/src/main/res/layout/home_screen_animeflv.xml
@@ -24,7 +24,7 @@
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:layout_marginTop="6dp"
-            android:background="@drawable/untitled" />
+            android:background="@drawable/img_back" />
 
         <RelativeLayout
             android:layout_width="match_parent"
