--- a/app/src/main/res/layout/undo.xml
+++ b/app/src/main/res/layout/undo.xml
@@ -1,12 +1,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:clickable="true"
-    android:elevation="5dp"
     android:layout_marginBottom="6dp"
     card_view:cardCornerRadius="4dp">
 
@@ -24,15 +22,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center|start"
-            android:text="Deleted"
             android:textColor="@android:color/white"/>
         <TextView
             android:id="@+id/undo_button"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center|end"
-            android:text="UNDO"
             android:textColor="?attr/colorAccent"
             android:textStyle="bold"/>
     </LinearLayout>
