--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="azulclaro">#03a9f4</color>
     <color name="naranjo">#ff9800</color>
     <color name="purpura">#673ab7</color>
-    <color name="black">#388e3c</color>
+    <color name="black">#000000</color>
     <color name="primary_material_light_1">#4caf50</color>
 
 
