Finaliza el proceso de implementacion Reyanime
Se implementan todos los fragmentos necesarios.
Se modifica la navegacion de la aplicacion
Se añada una pestaña para compartir la aplicacion

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -42,6 +42,11 @@
             android:title="@string/preferencias_drawer_layout"/>
 
         <item
+            android:id="@+id/nav_compartir"
+            android:icon="@drawable/ic_share_white_24dp"
+            android:title="@string/compartir_drawer_layout"/>
+
+        <item
             android:id="@+id/nav_faq"
             android:icon="@drawable/ic_help_white_24dp"
             android:title="@string/faq_drawer_layout"/>
