--- a/app/src/main/res/layout/fragment_generos_cont.xml
+++ b/app/src/main/res/layout/fragment_generos_cont.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/anime_genero"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:choiceMode="singleChoice" />
 
 </FrameLayout>
