Mejora el downloader, se elimina reyanime
Se elimina reyanime, ya no es seleccionable.
Se mejora el downloader, ahora se verifica la descarga cada vez que se visita la vista de descargas.
Se añade una progressbar en la seccion de informacion del anime, para cuando se descarga un capitulo desde ahi.

--- a/app/src/main/res/layout/fragment_episodios.xml
+++ b/app/src/main/res/layout/fragment_episodios.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,10 +6,20 @@
     android:orientation="vertical"
     tools:context="com.ouiaboo.ouiaboo.fragmentsFLV.EpisodiosFlv">
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginBottom="-8dp"
+        android:layout_marginTop="-4dp"
+        android:id="@+id/updateAppProgressBar"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/episodios"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice" />
+        android:choiceMode="singleChoice"
+        android:layout_below="@+id/updateAppProgressBar" />
 
-</FrameLayout>
+</RelativeLayout>
